[package]
name = "rust-server-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.28"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.17"
