[package]
name = "rust-server-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.28"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.20.3"
